2005-01-06  Mike Kestner  <mkestner@novell.com>

	* gnomevfs/gnomevfs-symbols.xml : FileSize is a long long.
	* generator/SymbolTable.cs : map longlong to C# long.

2005-01-05  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api.raw : regen.
	* sources/gtk-sharp-sources.xml : hide xembed.h and gtkxembed.h.

2005-01-05  Mike Kestner  <mkestner@novell.com>

	* gtk/TreeView.custom : add back the TreeCellDataFunc overloads for
	backward compat.
	* gtk/TreeViewColumn.custom : add back the TreeCellDataFunc overloads for
	backward compat.

2005-01-05  Mike Kestner  <mkestner@novell.com>

	* generator/Field.cs : deal with LPGen/LPUGen fields.

2005-01-05  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api.raw : regen.
	* sources/gtk-sharp-sources.xml : exclude gtkiconthemeparser.h.
	[Fixes #70898]

2005-01-05  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide some internal Image*Data structs.

2005-01-05  Alp Toker  <alp@atoker.com>

	* gtk/TextBuffer.custom : Mark SetText obsolete in favour of the Text
	property, and use Text in SetText in the meantime.

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api.raw : regen'd.
	* sources/gtk-sharp-sources.xml : exclude file system backend source.
	[Fixes #70904, #70897, and #70900]

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark out params for IMContext.GetSurrounding
	and GetPreeditString.
	[Fixes #70995]

2005-01-04  Mike Kestner  <mkestner@novell.com>

	* gtk/CellLayout.custom : declare SetAttributes and SetCellDataFunc.
	* gtk/CellView.custom : impl SetAttributes and SetCellDataFunc.
	* gtk/ComboBox.custom : impl SetAttributes and SetCellDataFunc.
	* gtk/EntryCompletion.custom : impl SetAttributes and SetCellDataFunc.
	* gtk/Gtk.metadata : hide some methods to be manually implemented.
	* gtk/Makefile.am : add new customs.
	* gtk/NodeCellDataFunc : use CellLayoutDataFuncNative.
	* gtk/TreeView.custom : use CellLayoutDataFunc not TreeCellDataFunc.