@@ -1,162 +1,0 @@
-<Type Name="Signal" FullName="Gtk.Signal">
-  <TypeSignature Language="C#" Value="public class Signal" Maintainer="auto" />
-  <AssemblyInfo>
-    <AssemblyName>gtk-sharp</AssemblyName>
-    <AssemblyPublicKey>[00 24 00 00 04 80 00 00 94 00 00 00 06 02 00 00 00 24 00 00 52 53 41 31 00 04 00 00 01 00 01 00 71 EB 6C 55 75 52 9C BF 72 44 F7 A6 EA 05 62 84 F9 EA E0 3B CF F2 CC 13 2C 9C 49 0A B3 09 EA B0 B5 6B CE 44 9D F5 03 D9 C0 A8 1E 52 05 85 CD BE 70 E2 FB 90 43 4B AC 04 FA 62 22 A8 00 98 B7 A1 A7 B3 AF 99 1A 41 23 24 BB 43 25 F6 B8 65 BB 64 EB F6 D1 C2 06 D5 73 2D DF BC 70 A7 38 9E E5 3E 0C 24 6E 32 79 74 1A D0 05 03 E4 98 42 E1 9B F3 7B 19 8B 40 21 26 CB 36 89 C2 EA 64 96 A4 7C B4]</AssemblyPublicKey>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
-    <AssemblyCulture>neutral</AssemblyCulture>
-    <Attributes />
-  </AssemblyInfo>
-  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
-  <Docs>
-    <summary>Deprecated. Do not use.</summary>
-    <remarks></remarks>
-  </Docs>
-  <Base>
-    <BaseTypeName>System.Object</BaseTypeName>
-  </Base>
-  <Interfaces />
-  <Attributes />
-  <Members>
-    <Member MemberName="Emitv">
-      <MemberSignature Language="C#" Value="public static void Emitv (Gtk.Object objekt, uint signal_id, Gtk.Arg args);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="objekt" Type="Gtk.Object" />
-        <Parameter Name="signal_id" Type="System.UInt32" />
-        <Parameter Name="args" Type="Gtk.Arg" />
-      </Parameters>
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <param name="signal_id">a <see cref="T:System.UInt32" /></param>
-        <param name="args">a <see cref="T:Gtk.Arg" /></param>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="ConnectFull">
-      <MemberSignature Language="C#" Value="public static ulong ConnectFull (Gtk.Object objekt, string name, Gtk.SignalFunc func, Gtk.CallbackMarshal unsupported, IntPtr data, Gtk.DestroyNotify destroy_func, int object_signal, int after);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.UInt64</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="objekt" Type="Gtk.Object" />
-        <Parameter Name="name" Type="System.String" />
-        <Parameter Name="func" Type="Gtk.SignalFunc" />
-        <Parameter Name="unsupported" Type="Gtk.CallbackMarshal" />
-        <Parameter Name="data" Type="System.IntPtr" />
-        <Parameter Name="destroy_func" Type="Gtk.DestroyNotify" />
-        <Parameter Name="object_signal" Type="System.Int32" />
-        <Parameter Name="after" Type="System.Int32" />
-      </Parameters>
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="func">a <see cref="T:Gtk.SignalFunc" /></param>
-        <param name="unsupported">a <see cref="T:Gtk.CallbackMarshal" /></param>
-        <param name="data">a <see cref="T:System.IntPtr" /></param>
-        <param name="destroy_func">a <see cref="T:Gtk.DestroyNotify" /></param>
-        <param name="object_signal">a <see cref="T:System.Int32" /></param>
-        <param name="after">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:System.UInt64" /></returns>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="EmitStopByName">
-      <MemberSignature Language="C#" Value="public static void EmitStopByName (Gtk.Object objekt, string name);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="objekt" Type="Gtk.Object" />
-        <Parameter Name="name" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="EmitvByName">
-      <MemberSignature Language="C#" Value="public static void EmitvByName (Gtk.Object objekt, string name, Gtk.Arg args);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="objekt" Type="Gtk.Object" />
-        <Parameter Name="name" Type="System.String" />
-        <Parameter Name="args" Type="Gtk.Arg" />
-      </Parameters>
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="args">a <see cref="T:Gtk.Arg" /></param>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="ConnectWhileAlive">
-      <MemberSignature Language="C#" Value="public static void ConnectWhileAlive (Gtk.Object objekt, string name, Gtk.SignalFunc func, IntPtr func_data, Gtk.Object alive_object);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="objekt" Type="Gtk.Object" />
-        <Parameter Name="name" Type="System.String" />
-        <Parameter Name="func" Type="Gtk.SignalFunc" />
-        <Parameter Name="func_data" Type="System.IntPtr" />
-        <Parameter Name="alive_object" Type="Gtk.Object" />
-      </Parameters>
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="func">a <see cref="T:Gtk.SignalFunc" /></param>
-        <param name="func_data">a <see cref="T:System.IntPtr" /></param>
-        <param name="alive_object">a <see cref="T:Gtk.Object" /></param>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="ConnectObjectWhileAlive">
-      <MemberSignature Language="C#" Value="public static void ConnectObjectWhileAlive (Gtk.Object objekt, string name, Gtk.SignalFunc func, Gtk.Object alive_object);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="objekt" Type="Gtk.Object" />
-        <Parameter Name="name" Type="System.String" />
-        <Parameter Name="func" Type="Gtk.SignalFunc" />
-        <Parameter Name="alive_object" Type="Gtk.Object" />
-      </Parameters>
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <param name="objekt">a <see cref="T:Gtk.Object" /></param>
-        <param name="name">a <see cref="T:System.String" /></param>
-        <param name="func">a <see cref="T:Gtk.SignalFunc" /></param>
-        <param name="alive_object">a <see cref="T:Gtk.Object" /></param>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="public Signal ();" />
-      <MemberType>Constructor</MemberType>
-      <ReturnValue />
-      <Parameters />
-      <Docs>
-        <summary>Deprecated. Do not use.</summary>
-        <returns>a <see cref="T:Gtk.Signal" /></returns>
-        <remarks></remarks>
-      </Docs>
-    </Member>
-  </Members>
-</Type>
