@@ -50,6 +50,7 @@
   <attr path="/api/namespace/class[@cname='GtkInit_']/method[@name='Check']" name="hidden">1</attr>
   <attr path="/api/namespace/class[@cname='GtkInit_']/method[@name='CheckAbiCheck']" name="hidden">1</attr>
   <attr path="/api/namespace/class[@cname='GtkInit_']/method[@name='AbiCheck']" name="hidden">1</attr>
+  <attr path="/api/namespace/class[@cname='GtkSignal_']" name="hidden">1</attr>
   <attr path="/api/namespace/class[@cname='GtkStock_']/method[@name='Add']/*/*[@name='items']" name="array">1</attr>
   <attr path="/api/namespace/class[@cname='GtkStock_']/method[@name='AddStatic']" name="hidden">1</attr>
   <attr path="/api/namespace/class[@cname='GtkStock_']/method[@name='ListIds']" name="hidden">1</attr>
@@ -62,6 +63,7 @@
   <attr path="/api/namespace/enum[@cname='GtkPathPriorityType']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkPathType']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkRcFlags']" name="hidden">1</attr>
+  <attr path="/api/namespace/enum[@cname='GtkSignalRunType']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkToolbarSpaceStyle']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkVisibility']" name="hidden">1</attr>
   <attr path="/api/namespace/interface[@cname='GtkCellEditable']/method[@name='EditingDone']" name="name">FinishEditing</attr>
