@@ -1,5 +1,9 @@
 2005-01-06  Mike Kestner  <mkestner@novell.com>
 
+	* gtk/Gtk.metadata : hide GtkSignal and SignalRunType.
+
+2005-01-06  Mike Kestner  <mkestner@novell.com>
+
 	* gnomevfs/gnomevfs-symbols.xml : FileSize is a long long.
 	* generator/SymbolTable.cs : map longlong to C# long.
 
